--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,9 @@ button{
     font-weight: 800;
     font-size: 18px;
     color:var(--logo-color);
-    line-height: 1.33;
+    line-height: 1.17;
     letter-spacing: 0.03em;
+    text-transform: uppercase
   }
   .logo2{
    
@@ -48,13 +49,16 @@ button{
 
   }
   .link{
+    text-decoration: none;
+  }
+  .link-heder{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-text-color);
   }
-  .link:hover,
+  .link-heder:hover,
   :focus{
     color: var(--portfolio-buuton-bg-hover-color);
     border: var(--portfolio-buuton-bg-hover-color);
@@ -202,10 +206,10 @@ border-radius: 4px;
           color: var(--footer-text-color);
         }
 /* portfolio */
-.menu{
+.list{
 
 }
-.menu__buuton{
+.list__buuton{
     font-family:'Roboto', sans-serif;
     font-weight: 500;
 font-size: 16px;
@@ -216,9 +220,9 @@ background-color: var(--logo-footer-color);
 border: 1px solid var(--footer-text-color);
 border-radius: 4px;
 }
-.menu__buuton
+.list__buuton
 :focus,
-.menu__buuton:hover{
+.list__buuton:hover{
     color: var(--bg-color);
     background-color: var(--portfolio-buuton-bg-hover-color);
 
