--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ button{
   li{
     list-style-type: none;
   }
-  .logo{
+  .Logo{
     font-family: 'Raleway',sans-serif;
     font-weight: 800;
     font-size: 18px;
