--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ border-radius: 4px;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
+color:var(--color-text-color)
 }
 .portfolio__text {
     font-size: 16px;
