--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,8 @@ border-radius: 4px;
             text-align: center;
             text-align: center;
             text-transform: capitalize ;
+            letter-spacing: 0.02em;
+            color: var(--color-text-color);
          
         }
         .team__list {
